@@ -30,4 +30,4 @@ D/wmlscript////
 /configure/1.158/Sun Mar  5 14:33:26 2006//
 /configure.in/1.163/Sun Mar  5 14:33:26 2006//
 /gw-config.h.in/1.18/Sun Mar  5 14:33:26 2006//
-/ChangeLog/1.2746/Sun Mar  5 14:37:11 2006//
+/ChangeLog/1.2747/Sun Mar  5 15:01:19 2006//
