@@ -319,6 +319,11 @@ void use_global_client_certkey_file(Octstr *certkeyfile);
  */
 void use_global_server_certkey_file(Octstr *certfile, Octstr *keyfile); 
 
+/* Specifies files containing certificates Kannel is willing to trusted when
+ * actins as https clients
+ */
+void use_global_trusted_ca_file(Octstr *ssl_trusted_ca_file);
+
 /* Configures all global variables for client and server SSL mode 
  * from the values specified within the configuration file.
  */
